<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingLeft="5dip"
    android:paddingRight="5dip"
    android:background="@color/list_background">
    <LinearLayout 
      android:id="@+id/alarm_linear"   
 	 android:orientation="horizontal"
  	 android:layout_width="fill_parent"
  	 android:layout_height="wrap_content"
  	 android:background="#4f5f6f"
        >
      <TextView 
      android:id="@+id/alarm_id"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/alarm_id"
      android:layout_marginLeft="20dip"
      />
    <TextView 
      android:id="@+id/cam_id"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/cam_id"
      android:layout_marginLeft="20dip"
      />
      <TextView 
      android:id="@+id/alarm_time"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/alarm_time"
      android:layout_marginLeft="20dip"
      />
      <TextView 
      android:id="@+id/alarm_type"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/alarm_type"
      android:layout_marginLeft="20dip"
      />
      <TextView 
      android:id="@+id/alarm_duration"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/alarm_duration"
      android:layout_marginLeft="20dip"
      />
      <TextView 
      android:id="@+id/alarm_location"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/alarm_location"
      android:layout_marginLeft="20dip"
      /> 
      </LinearLayout>  

	<com.vasys.util.RefreshListView
    android:id="@+id/listview_alarm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@color/divider_color"
    android:dividerHeight="2dip"
    android:layout_below="@id/alarm_linear"
    >
    
	</com.vasys.util.RefreshListView>
    
</RelativeLayout>