<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/white">
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:background="@color/blue"
        >
      <ImageView 
          android:id="@+id/log_back"
          android:src="@drawable/back"
	      android:layout_width="32dip"
	      android:layout_height="32dip"
	      android:layout_marginTop="5dp"
	      android:layout_marginLeft="8dp"
	      />
        <TextView 
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:text="@string/read_record"
            android:paddingLeft="100dip"
            android:gravity="center_vertical"
            />
        
    </LinearLayout>
    
    <LinearLayout
     android:id="@+id/log_linear"   
 	 android:orientation="horizontal"
  	 android:layout_width="fill_parent"
  	 android:layout_height="wrap_content"
  	 android:background="#4f5f6f"
        >
      <TextView 
      android:id="@+id/log_action_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/log_action"
      android:layout_marginLeft="30dip"
      android:textSize="18sp"
      />
    <TextView 
      android:id="@+id/log_time_txt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/log_time"
      android:layout_marginLeft="50dip"
      android:textSize="18sp"
      />
    </LinearLayout>
	<ListView 
    android:id="@+id/listview_log"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="@color/divider_color"
    android:dividerHeight="1dip"
    
    >
    
	</ListView>
	
</LinearLayout>
